samples/_failures_safe/1761421077_202c8d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d015a53.c: In function ‘main’:
./samples/SAFE/__tmp_2d015a53.c:156:27: error: expected ‘)’ at end of input
  156 |     state_machine_init(&sm
      |                       ~   ^
      |                           )
./samples/SAFE/__tmp_2d015a53.c:156:5: error: expected declaration or statement at end of input
  156 |     state_machine_init(&sm
      |     ^~~~~~~~~~~~~~~~~~
